[gd_scene load_steps=16 format=2]

[ext_resource path="res://juego/EstacionEspacial/EstacionEnemig4.png" type="Texture" id=1]
[ext_resource path="res://juego/EstacionEspacial/EstacionEnemig3.png" type="Texture" id=2]
[ext_resource path="res://juego/EstacionEspacial/EstacionEnemig2.png" type="Texture" id=3]
[ext_resource path="res://juego/EstacionEspacial/EstacionEnemiga1.png" type="Texture" id=4]
[ext_resource path="res://juego/Nave/BaseEnemiga.gd" type="Script" id=5]
[ext_resource path="res://juego/EstacionEspacial/AreaAtraccion.tscn" type="PackedScene" id=6]
[ext_resource path="res://juego/Enemigos/AreaColision.gd" type="Script" id=7]
[ext_resource path="res://juego/EstacionEspacial/PosicionesSpawn.gd" type="Script" id=8]
[ext_resource path="res://juego/EstacionEspacial/RutaEnemigo.gd" type="Script" id=9]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.826952, -2.70484 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "rotar_anti_horario "
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotar_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 56.0
height = 394.879

[sub_resource type="CapsuleShape2D" id=6]
radius = 24.6044
height = 81.9271

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 49.6511, 167.767, -49.6511, -167.767, -468.668, 202.761, -21.181, 61.6018, 21.181, -61.6018, -503.867, -59.4015, -53.2605, 28.3192, 53.2605, -28.3192, -330.383, -348.712, -64.8288, 20.0874, 64.8288, -20.0874, -75.9395, -513.449, -76.3971, 11.8557, 76.3971, -11.8557, 286.656, -378.932, -115.396, -14.1523, 115.396, 14.1523, 479.66, -103.276, -12.389, -97.6877, 12.389, 97.6877, 369.422, 317.761, 35.2383, 45.9859, -35.2383, -45.9859, 224.555, 445.755, 70.1478, -91.2337, -70.1478, 91.2337, 111.18, 509.435, 0, 0, 0, 0, -112.146, 487.741, 45.7136, 69.8723, -45.7136, -69.8723, -304.224, 409.792, 0, 0, 0, 0, -468.668, 202.761 )
}

[node name="BaseEnemiga" type="Node2D"]
rotation = 2.05949
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
"anims/rotar_anti_horario " = SubResource( 4 )
anims/rotar_horario = SubResource( 3 )

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -83.2986, 49.9535 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -51.211, 27.2294 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 6 )]
collision_layer = 64
collision_mask = 9

[node name="CollisionShape2D" parent="AreaAtraccion" index="0"]
position = Vector2( -5.29768, 2.81684 )

[node name="SpriteZonaRecarga" parent="AreaAtraccion" index="1"]
modulate = Color( 0.780392, 0.054902, 0.054902, 0.0666667 )
position = Vector2( 1.75799, 0.629897 )

[node name="sprite" type="Node2D" parent="."]
position = Vector2( 0.826952, -2.70484 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="sprite"]
position = Vector2( 145, -98 )
rotation = 3.14159
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="sprite"]
position = Vector2( 0, -265 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="sprite"]
position = Vector2( -4, 0 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="sprite"]
position = Vector2( 0, -218 )
texture = ExtResource( 1 )

[node name="AreaColision" type="Area2D" parent="sprite"]
position = Vector2( 9.26042, -14.8407 )
rotation = 2.07694
collision_layer = 64
collision_mask = 9
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprite/AreaColision"]
position = Vector2( -26.4856, 22.022 )
rotation = 1.0821
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="sprite/AreaColision"]
position = Vector2( -147.56, -68.775 )
rotation = 2.63719
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="sprite/AreaColision"]
position = Vector2( -45.3833, 117.002 )
rotation = 2.63719
shape = SubResource( 6 )

[node name="PosicionesSpawn" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Norte" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( -459.3, 237.42 )

[node name="Sur" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 456.561, -257.482 )

[node name="Este" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 250.867, 478.2 )

[node name="Oeste" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( -239.298, -462.832 )

[node name="RutaEnemigo" type="Path2D" parent="."]
position = Vector2( -10.1604, -12.7187 )
curve = SubResource( 7 )
script = ExtResource( 9 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="body_entered" from="sprite/AreaColision" to="." method="_on_AreaColision_body_entered"]

[editable path="AreaAtraccion"]
